--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "husky": "^7.0.0",
+    "lint-staged": "^12.1.2",
     "typescript": "^4.5.2"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
