--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#b1b1b1",
-    "activityBar.activeBorder": "#5858c7",
-    "activityBar.background": "#b1b1b1",
+    "activityBar.activeBackground": "#809090",
+    "activityBar.activeBorder": "#8f308f",
+    "activityBar.background": "#809090",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#5858c7",
+    "activityBarBadge.background": "#8f308f",
     "activityBarBadge.foreground": "#e7e7e7",
-    "sash.hoverBorder": "#b1b1b1",
-    "statusBar.background": "#989898",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#7e7e7e",
-    "statusBarItem.remoteBackground": "#989898",
-    "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#989898",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#98989899",
-    "titleBar.inactiveForeground": "#15202b99"
+    "sash.hoverBorder": "#809090",
+    "statusBar.background": "#677676",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#809090",
+    "statusBarItem.remoteBackground": "#677676",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#677676",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#67767699",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#989898"
+  "peacock.color": "#677676"
 }
