--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "prueba-typescript",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
-    "compile": "tsc --watch"
+    "compile": "tsc --watch",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/debug": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
@@ -23,10 +25,17 @@
     "lint-staged": "^12.1.2",
     "typescript": "^4.5.2"
   },
+  "dependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "chalk": "^4.1.2",
+    "cors": "^2.8.5",
+    "debug": "^4.3.2",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
+  },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
-  },
-  "dependencies": {
-    "morgan": "^1.10.0"
   }
 }
