--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "lib": ["ES2015", "DOM"],
+    "lib": ["ES2016", "DOM"],
     "outDir": "./dist",
-    "noEmitOnError": true
+    "noEmitOnError": true,
+    "sourceMap": true
   },
   "include": ["./**/*.ts", ".eslintrc.js"],
   "exclude": ["./dist", "node_modules"]
