--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.13",
     "morgan": "^1.10.0"
   },
   "lint-staged": {
