Add error functions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "lib": ["ES2016", "DOM"],
     "outDir": "./dist",
     "noEmitOnError": true,
-    "sourceMap": true
+    "sourceMap": true,
+    // "rootDir": ".",
+    "esModuleInterop": true
   },
   "include": ["./**/*.ts", ".eslintrc.js"],
   "exclude": ["./dist", "node_modules"]
