--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "compile": "tsc --watch",
     "start": "node dist/index.js",
     "build": "tsc",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -39,5 +40,10 @@
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "dist"
+    ]
   }
 }
