--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "compile": "tsc --watch",
     "start": "node dist/index.js",
     "build": "tsc",
-    "postinstall": "npm run build",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest",
+    "test-coverage": "jest --watchAll --collect-coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/debug": "^4.1.7",
+    "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.3.0",
@@ -28,13 +30,17 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "babel-jest": "^27.3.1",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jest": "^27.3.1",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0"
   },
