--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prepare": "husky install",
     "compile": "tsc --watch",
     "start": "node dist/index.js",
-    "build": "tsc && npm run build",
+    "build": "tsc",
     "lint": "eslint .",
     "test": "jest",
     "test-coverage": "jest --watchAll --collect-coverage"
