--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   "dependencies": {
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "babel-jest": "^27.3.1",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
