--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "prepare": "husky install",
     "compile": "tsc --watch",
     "start": "node dist/index.js",
+    "dev": "nodemon dist/index.js -q",
     "build": "tsc",
     "lint": "eslint .",
     "test": "jest",
-    "test-coverage": "jest --watchAll --collect-coverage"
+    "coverage": "jest --watchAll --collect-coverage"
   },
   "keywords": [],
   "author": "",
