--- a/package.json
+++ b/package.json
@@ -38,14 +38,17 @@
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "babel-jest": "^27.3.1",
+    "bcrypt": "^5.0.1",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "debug": "^4.3.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jest": "^27.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
