--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "sourceMap": true
     // "rootDir": ".",
   },
-  "include": ["./**/*.ts", ".eslintrc.js", "babel.config.js"],
+  "include": ["src/**/*.ts", ".eslintrc.js", "babel.config.js"],
   "exclude": ["./dist", "node_modules"]
 }
