Removed redundant type in RequestAuth

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=own-API
+sonar.projectKey=Own-API
 
 sonar.sources=.
 sonar.test.inclusions=src/**/*.spec.ts
