--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=Own-API
 
 sonar.sources=.
 sonar.test.inclusions=src/**/*.spec.ts
-sonar.coverage.exclusions=src/**/*.spec.ts
+sonar.coverage.exclusions=src/**/*.spec.ts, **/firebase.ts, **/upload.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.scm.provider=git
 
