--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "eslint-plugin-import": "^2.25.3",
     "husky": "^7.0.0",
     "lint-staged": "^12.1.2",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "@types/joi": "^17.2.3",
+    "joi": "^17.4.2"
   },
   "dependencies": {
-    "@types/joi": "^17.2.3",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
     "@types/cors": "^2.8.12",
@@ -49,7 +50,6 @@
     "express-validation": "^3.0.8",
     "firebase-admin": "^10.0.0",
     "jest": "^27.3.1",
-    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
