--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "eslint-plugin-import": "^2.25.3",
     "husky": "^7.0.0",
     "lint-staged": "^12.1.2",
-    "typescript": "^4.5.2",
-    "@types/joi": "^17.2.3",
-    "joi": "^17.4.2"
+    "typescript": "^4.5.2"
   },
   "dependencies": {
     "@babel/preset-env": "^7.16.4",
+    "@types/joi": "^17.2.3",
+    "joi": "^17.4.2",
     "@babel/preset-typescript": "^7.16.0",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
