Fixed test of updateBoard

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=Own-API
 
-sonar.sources=.
+sonar.sources=src
 sonar.test.inclusions=src/**/*.spec.ts
-sonar.coverage.exclusions=src/**/*.spec.ts, **/firebase.ts, **/uploadLogo.ts
+sonar.coverage.exclusions=src/**/*.spec.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.scm.provider=git
 
