--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "debug": "nodemon --inspect-brk dist/index.js -q",
     "build": "tsc",
     "lint": "eslint .",
-    "test": "jest",
-    "coverage": "jest --watchAll --collect-coverage"
+    "test": "jest --testPathIgnorePatterns /dist /server/routes/",
+    "test-dev": "jest --watchAll --runInBand --collect-coverage"
   },
   "keywords": [],
   "author": "",
@@ -20,27 +20,30 @@
   "devDependencies": {
     "@types/debug": "^4.1.7",
     "@types/jest": "^27.0.3",
+    "@types/morgan": "^1.9.3",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "babel-jest": "^27.3.1",
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "husky": "^7.0.0",
+    "jest": "^27.3.1",
     "lint-staged": "^12.1.2",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.1.6",
     "typescript": "^4.5.2"
   },
   "dependencies": {
     "@babel/preset-env": "^7.16.4",
-    "@types/joi": "^17.2.3",
-    "joi": "^17.4.2",
     "@babel/preset-typescript": "^7.16.0",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
-    "@types/morgan": "^1.9.3",
-    "babel-jest": "^27.3.1",
+    "@types/joi": "^17.2.3",
     "bcrypt": "^5.0.1",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
@@ -49,12 +52,11 @@
     "express": "^4.17.1",
     "express-validation": "^3.0.8",
     "firebase-admin": "^10.0.0",
-    "jest": "^27.3.1",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "morgan": "^1.10.0",
-    "multer": "^1.4.3",
-    "nodemon": "^2.0.15"
+    "multer": "^1.4.3"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
